Fixed z-index as tether moves elements around

--- a/js-library/app/css/_icon_buttons.scss
+++ b/js-library/app/css/_icon_buttons.scss
@@ -5,6 +5,7 @@ factlink-icon-button {
   position: absolute;
   display: block;
   cursor: pointer;
+  z-index: $max-z-index - 1;
 
   &:before {
     @extend %icon-font;
